--- a/custom.css
+++ b/custom.css
@@ -1,12 +1,14 @@
 .reveal p
 {
-  font-size: 28px;
+  font-size: 20px;
   line-height: 1.5em;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.05em;
+  font-family: verdana;
 }
 
 .reveal h1 h2 h3 h4 
 {
+  font-family: verdana;
   color: #DA8321;
 }
 
