--- a/custom.css
+++ b/custom.css
@@ -9,10 +9,9 @@
 .reveal h1 h2 h3 h4 
 {
   font-family: verdana;
-  color: #DA8321;
 }
 
 .reveal code 
 {
-  color: #E2A22B;
+  color: #AC8235;
 }
